# climate-reanalysis

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  FAQ.md  PROJECT.md  PROJECT_BRIEF.md  README.md
.claude/: CLAUDE.md  PROJECT_BRIEF.md  SampleGRB2 Index file.txt  settings.local.json
.claude/planning/: STAGED_PLAN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deployment.yml  feature_request.yml  science_review.yml  tech_debt.yml
backend/: pyproject.toml  requirements.txt  smoke_composite.py
backend/.claude/: settings.local.json
backend/app/: api_options.py  climo_r2.py  config.py  disk_cache.py  main.py  map_service.py  retrieval.py  synopsis.py  synopsis_prompt.md  visualizer.py
backend/app/map_pipeline/: __init__.py  climo_policy.py  fetch_plan.py  map_diagnostics.py  map_labels.py  pipeline_steps.py  render_pipeline.py  request.py  request_logging.py  time_selection.py  wind_overlay.py
backend/obs_cache/monthly/: UGRD_500mb_202601.nc  UGRD_500mb_202602.nc  UGRD_500mb_202603.nc  UGRD_700mb_202506.nc  UGRD_850mb_202507.nc  UGRD_850mb_202601.nc  UGRD_850mb_202602.nc  UGRD_850mb_202603.nc  VGRD_500mb_202601.nc  VGRD_500mb_202602.nc  VGRD_500mb_202603.nc  VGRD_700mb_202506.nc  VGRD_850mb_202507.nc  VGRD_850mb_202601.nc  VGRD_850mb_202602.nc  VGRD_850mb_202603.nc
backend/scripts/: discussion_post.py  example_discussion.txt  generate_region_thumbnails.py  precompute_climo.py  synopsis_prompt.md
backend/tests/: test_composite.py  test_region_selection.py  test_retrieval.py
branding/: README.md
docs/: WEATHER_STORIES.md
docs/archive/: COLOR_SCALES.md  STAGED_PLAN.md
docs/reference/: SampleGRB2 Index file.txt  (+1 more)
frontend/: App.tsx  FaqPage.tsx  LegalPage.tsx  PSL.md  SiteFooter.tsx  eslint.config.js  index.css  index.html  mapName.ts  mapRecipe.ts  next.config.ts  package-lock.json  package.json  sharedOptions.ts  tsconfig.json
(+161 files in other folders)
