[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: fetches .idx files only (~20KB each) — requires internet",
    "validation: downloads a full GRIB file (~38MB) — run only when changing retrieval logic",
]
