[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "eccodes>=2.47.0",
    "eccodeslib>=2.46.2.19",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: fetches .idx files only (~20KB each) — requires internet",
    "validation: downloads a full GRIB file (~38MB) — run only when changing retrieval logic",
    "composite: fetches multiple GRIB fields to verify averaging math — requires internet, ~2 min",
]
